# walue_whatsapp_provider

./: .gitignore  README.md  license.txt  pyproject.toml  requirements.txt  setup.py
walue_whatsapp_provider/: constants.py  hooks.py  modules.txt  patches.txt  tasks.py
walue_whatsapp_provider/api/: __init__.py  calls.py  customers.py  embedded_signup.py  messages.py  metrics.py  oauth.py  webhooks.py
walue_whatsapp_provider/config/: desktop.py
walue_whatsapp_provider/doctype/daily_usage_metrics/: __init__.py  daily_usage_metrics.json  daily_usage_metrics.py
walue_whatsapp_provider/doctype/embedded_signup_session/: embedded_signup_session.py
walue_whatsapp_provider/doctype/monthly_usage_summary/: monthly_usage_summary.json  monthly_usage_summary.py
walue_whatsapp_provider/doctype/subscription_plan/: __init__.py  subscription_plan.py
walue_whatsapp_provider/doctype/whatsapp_customer/: __init__.py  whatsapp_customer.py
walue_whatsapp_provider/doctype/whatsapp_provider_settings/: __init__.py
walue_whatsapp_provider/walue_whatsapp_provider/doctype/: __init__.py
walue_whatsapp_provider/walue_whatsapp_provider/doctype/customer_invoice/: __init__.py  customer_invoice.json  customer_invoice.py
walue_whatsapp_provider/walue_whatsapp_provider/doctype/embedded_signup_session/: __init__.py  embedded_signup_session.json
walue_whatsapp_provider/walue_whatsapp_provider/doctype/monthly_usage_summary/: __init__.py
walue_whatsapp_provider/walue_whatsapp_provider/doctype/subscription_plan/: subscription_plan.json
(+3 files in other folders)
